Add method to get next meeting time and improve countdown handling